# vibe-tools

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  commands.txt  package-lock.json  package.json  pyproject.toml  tsconfig.json
cli_package/: __init__.py  cli.py  hook.py  promptgit.py  setup.cfg  vibecheck.py
cli_package/js_ast_scanner/: package.json  scanner.js
codesentry/: __init__.py  cli.py  hook.py  promptgit.py  setup.cfg  setup.py  vibecheck.py
codesentry/js_ast_scanner/: package.json  scanner.js
src/: extension.ts
vibe_tools/: cli.py  promptgit.py  setup.py  vibecheck.py
