[metadata]
name = jenchad-guard
version = 1.0.0
description = AI code security scanner — 18 patterns
long_description = file: README.md
long_description_content_type = text/markdown
author = Jen Chad
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
 
[options]
packages = vibe_tools
python_requires = >=3.10
install_requires =
    click>=8.0
    rich>=13.0
 
[options.entry_points]
console_scripts =
    vibeguard = vibe_tools.cli:cli
    vibecheck = vibe_tools.vibecheck:main
    promptgit = vibe_tools.promptgit:cli
